name:                ln-lib
version:             0.1.0.2
synopsis:            Misc shared code for LN
description:         Please see README.md
homepage:            http://github.com/adarqui/ln-lib#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2015 Andrew Darqui
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.Lib
                       LN.Lib.Codec
                       LN.Lib.Either
                       LN.Lib.Text.Search
                       LN.Lib.Url
                       LN.Lib.Validate
  build-depends:       base
                     , aeson
                     , blaze-html
                     , bytestring
                     , pureMD5
                     , text
                     , text-regex-replace
                     , text-icu
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  ghc-options:         -Wall -Werror

-- executable ln-lib-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , ln-lib
--  default-language:    Haskell2010

test-suite ln-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ln-lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ln-lib
